# konsync

./: .gitignore  CHANGELOG.md  CONTRIBUTION.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  setup.py.disabled
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml
.trunk/: trunk.yaml
.trunk/configs/: .bandit  .prettierrc.yaml  .pylintrc  ruff.toml
konsave/: __init__.py  __main__.py  conf_kde.yaml  conf_other.yaml  consts.py  funcs.py  parse.py
konsync/: __init__.py  __main__.py  conf_kde.taml  conf_other.taml  consts.py  funcs.py  parse.py  schema.taml
